go-filter-chain/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_google
                http_filters:
                  - name: envoy.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: go-filter
                        # Default is 200ms; override if your server needs e.g. warmup time.
                        timeout: 20s
                  #              include_peer_certificate: false
                  - name: envoy.router
                    config: {}
  clusters:
    - name: service_google
      connect_timeout: 3s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.17.0.1
                      port_value: 8688
    - name: go-filter
      type: static
      http2_protocol_options: {}
      type: STRICT_DNS
      load_assignment:
        cluster_name: go-filter
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.17.0.1
                      port_value: 8081

      # This timeout controls the initial TCP handshake timeout - not the timeout for the
      # entire request.
      connect_timeout: 6s
        #  - name: zipkin
        #    connect_timeout: 1s
        #    type: strict_dns
        #    lb_policy: round_robin
        #    load_assignment:
        #      cluster_name: zipkin
        #      endpoints:
        #      - lb_endpoints:
        #        - endpoint:
        #            address:
        #              socket_address:
        #                address: 172.17.0.1
        #                port_value: 9411
        # stats_sinks:
        #   name: envoy.stat_sinks.statsd
        #   type: STRICT_DNS
        #   config:
        #     address:
        #       socket_address:
        #         address: host.docker.internal
        #         port_value: 8125
